--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,14 @@
           <div id="providerFields">
             <label class="field" for="apiKey">
               <span id="apiKeyLabel">API Key</span>
-              <input id="apiKey" type="password" placeholder="sk-..." autocomplete="off" />
+              <input
+                id="apiKey"
+                type="password"
+                placeholder="sk-..."
+                autocomplete="off"
+                autocapitalize="off"
+                spellcheck="false"
+              />
             </label>
 
             <label class="field" for="apiUrl">
@@ -56,7 +63,7 @@
 
             <label class="field" for="model">
               <span>Model</span>
-              <input id="model" type="text" />
+              <input id="model" type="text" autocapitalize="off" spellcheck="false" />
             </label>
 
             <label class="field" for="temperature">
@@ -76,6 +83,7 @@
           </div>
 
           <p id="saveStatus" class="save-status"></p>
+          <p class="security-note">安全提示：API Key 僅儲存在本機（chrome.storage.local），不會同步到雲端。</p>
         </form>
       </details>
     </main>
